# MetuCengGraph

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md
MCG/: CMakeLists.txt
MCG/cmake/: Config.cmake.in
MCG/include/: parsePly.h  parser.h  ppm.h
MCG/source/: parsePly.cpp  parser.cpp  ppm.cpp
lib/: CMakeLists.txt
sample/hw2/inputs/: ellipsoids.xml  marching_dragons.xml  spheres_transform.xml
sample/hw3/inputs/: cornellbox_boxes_dynamic.xml  dragon_dynamic.xml  focusing_dragons.xml  metal_glass_plates_rough.xml
sample/hw4/inputs/: .brickwall_with_normalmap.xml.swp  .wood_box_all.xml.swp  brickwall_with_normalmap.xml  wood_box.xml  wood_box_all.xml  wood_box_no_specular.xml
sample/hw4/inputs/veach_ajar/: scene.xml
sample/hw5/inputs/: dragon_spot_light_msaa.xml  glass_sphere_env.xml  head_env_light.xml  mirror_sphere_env.xml  sphere_env_light.xml
sample/hw5/inputs/tt/: README.txt  generate.py  geometry.pbrt  materials.pbrt  scene_glacier.xml  scene_pisa.xml  tt.pbrt
sample/hw5/outputs/: glass_sphere_env.exr  head_env_light.exr  mirror_sphere_env.exr  sphere_env_light.exr
sample/hw5/outputs/tt/: audi-tt-glacier-1600.exr  audi-tt-pisa-1600.exr
sample/inputs/: cornellbox_brushed_metal.xml  dragon_metal.xml  metal_glass_plates.xml  metal_glass_plates_rough.xml  spheres.xml  spheres_mirror.xml
sample/inputs/akif_uslu/berserker/: two_berserkers.xml
sample/inputs/grass/: grass_desert.xml
sample/inputs/tap_water/xml/: tap_0000.xml  tap_0001.xml  tap_0005.xml  tap_0006.xml  tap_0008.xml  tap_0009.xml  tap_0011.xml  tap_0012.xml  tap_0013.xml  (+137 more)
(+894 files in other folders)
